# Adversa

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  adversa_grpo_training.ipynb  client.py  frontend_instructions.md  hf_push_instructions.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh  tasks.py  train.py
adversa_transfer/: 01_HACKATHON_RULES.md  02_PROJECT_SPEC.md  03_TRAINING_PLAN.md  04_EXECUTION_TIMELINE.md  05_COMPETITIVE_ANALYSIS.md  06_SELF_REFINEMENT_AUDIT.md  MASTER_PROMPT.md
frontend/: app.py
server/: __init__.py  adversa_environment.py  app.py  case_templates.py  courtroom_state.py  requirements.txt
tests/: test_env.py
