[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adversa"
version = "1.0.0"
description = "Multi-agent adversarial courtroom trial simulation — OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["reinforcement-learning", "multi-agent", "openenv", "legal", "simulation"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "requests>=2.32",
]

[project.optional-dependencies]
training = [
    "trl>=0.12",
    "transformers>=4.46",
    "torch>=2.3",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
